fix(auth): add safety timeout

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,7 @@ REDIS_PASSWORD=your-redis-password-here
 
 # Supabase (for token verification)
 SUPABASE_URL=http://127.0.0.1:54321
+SUPABASE_ANON_KEY=your-supabase-anon-key-here
 
 # Production only - CORS origin for frontend
 # FRONTEND_URL=https://your-app.vercel.app
