--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,18 +2,14 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-# Install uv defined in pyproject.toml
+# Install uv
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
 
 # Copy dependency definitions
 COPY pyproject.toml uv.lock ./
 
-# Install dependencies
-RUN uv sync --frozen --no-dev
-
 # Copy application code
 COPY . .
 
-# Run uvicorn
-ENV PATH="/app/.venv/bin:$PATH"
-CMD ["uv", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
+# uv run will install dependencies on first run
+CMD ["uv", "run", "--no-dev", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
